--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,11 @@
 # Server
 PORT=4000
 SESSION_SECRET=session-secret
+SESSION_COOKIE_NAME=rp_session
+CSRF_COOKIE_NAME=rp_csrf
 # Host port uses 5433 to avoid conflicts with local Postgres defaults
 DATABASE_URL=postgres://postgres:postgres@localhost:5433/rapid_prototype
+TEST_DATABASE_URL=postgres://postgres:postgres@localhost:5433/rapid_prototype_test
 CORS_ALLOWED_ORIGINS=http://localhost:5173
 
 # Admin bootstrap (used by seed script only)
