implement Codex and Babel prompt processing

--- a/.env.sample
+++ b/.env.sample
@@ -12,9 +12,12 @@ CORS_ALLOWED_ORIGINS=http://localhost:5173
 ADMIN_EMAIL=admin-email
 ADMIN_PASSWORD=change-admin-password
 
-# OpenAI / Codex Cloud (future iterations)
+# OpenAI / Codex Cloud
 OPENAI_API_KEY=openai-sdk-key
 CODEX_ORG=your-org
+CODEX_SYSTEM_PROMPT=You are an expert React engineer; output the full component.
+CODEX_WORKER_POLL_MS=5000
+CODEX_WORKER_BATCH_SIZE=2
 
 # GitHub integration (future iterations)
 GITHUB_TOKEN=your-gh-token
