--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "npm run dev --workspace apps/api",
     "dev:api": "npm run dev --workspace apps/api",
     "dev:ui": "npm run dev --workspace apps/ui",
+    "dev:worker": "npm run worker --workspace apps/api",
     "build": "npm run build --workspace apps/ui",
     "lint": "npm run lint --workspaces",
     "test": "npm run test --workspace apps/api",
