--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -10,6 +10,7 @@
     "lint": "tsc --noEmit"
   },
   "dependencies": {
+    "@babel/standalone": "^7.24.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.30.2"
   },
   "devDependencies": {
+    "@types/babel__standalone": "^7.1.6",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.1.0",
