--- a/.env.sample
+++ b/.env.sample
@@ -16,6 +16,7 @@ ADMIN_PASSWORD=change-admin-password
 OPENAI_API_KEY=openai-sdk-key
 CODEX_ORG=your-org
 CODEX_SYSTEM_PROMPT=You are an expert React engineer; output the full component.
+CODEX_TITLE_MODEL=o4-mini
 CODEX_WORKER_POLL_MS=5000
 CODEX_WORKER_BATCH_SIZE=2
 
